[package]
name = "callextargs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extargsparse_codegen = { path = "X:\\extargsparse-rs\\extargsparse_codegen"}
extargsparse_worker = { path = "X:\\extargsparse-rs\\extargsparse_worker" }
regex = "1"
lazy_static = "^1.4.0"
