[package]
name = "dyntrait"
version = "0.1.0"
authors = ["wrc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


#[target.'cfg(unix)'.dependencies.libc]
#version = "0.2"

#[target.'cfg(windows)'.dependencies.winapi]
#version = "0.3"
#features = ["sysinfoapi", "synchapi","winsock2","ioapiset","minwinbase","errhandlingapi","handleapi","ws2def","ws2tcpip","mswsock"]
