[package]
name = "tokiotst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "^1.21.2",  features = ["full","tracing"]}
extargsparse_worker = "^0.1.4"
#extargsparse_worker = {path = "../../../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = "^0.1.2"
lazy_static = "^1.4.0"
log4rs = "^0.8.3"
log = "^0.4.8"
chrono = "^0.4.0"
futures = "^0.3"


[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winbase", "debugapi", "stringapiset", "winnls", "datetimeapi",
	"sysinfoapi", "wincred","combaseapi","errhandlingapi"]
