[package]
name = "tstasn1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#asn1obj_codegen = {path = "../../../asn1obj/asn1obj_codegen"}
asn1obj_codegen = "^0.1.0"
# asn1obj = {path = "../../../asn1obj/asn1obj"}
asn1obj = "^0.1.0"
serde_json = "^1.0.42"
