[package]
name = "tstcases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extargsparse_worker = "^0.1.2"
#extargsparse_worker = {path = "../../../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = "^0.1.0"
lazy_static = "^1.4.0"
regex = "1"
chrono = "^0.4.0"
log4rs = "^0.8.3"
log = "^0.4.8"
pelite = "^0.9.1"
base64 = "^0.13.0"

pkcs7 = { path = "../../../formats/pkcs7" }
der = {path = "../../../formats/der"}

[target.'cfg(windows)'.dependencies]
winreg = "^0.10"

[dependencies.winapi]
version = "0.3"
features = ["winbase", "debugapi", "stringapiset", "winnls", "datetimeapi",
	"sysinfoapi", "wincred","combaseapi","errhandlingapi"]
