[package]
name = "tstcases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extargsparse_worker = "^0.1.4"
#extargsparse_worker = {path = "../../../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = "^0.1.2"
lazy_static = "^1.4.0"
regex = "1"
chrono = "^0.4.0"
log4rs = "^0.8.3"
log = "^0.4.8"
pelite = "^0.9.1"
base64 = "^0.13.0"
num-bigint = "^0.4.3"
num-traits = "^0.2.5"
hmac = "^0.12.1"
sha2 = "^0.10.2"
hex = "^0.4.3"
rand = "^0.8.5"
rust-crypto = "^0.2.36"
rsa = "^0.6.1"
aes = "^0.8.1"
cbc = "^0.1.2"
cfb-mode = "^0.8.1"

asn1obj = { path = "../../../asn1obj/asn1obj"}
asn1obj_codegen = { path = "../../../asn1obj/asn1obj_codegen"}


[target.'cfg(windows)'.dependencies]
winreg = "^0.10"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winbase", "debugapi", "stringapiset", "winnls", "datetimeapi",
	"sysinfoapi", "wincred","combaseapi","errhandlingapi"]
