[package]
name = "writecallextargs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "^3.3.0"
ctrlc = "^3.2.2"
extargsparse_worker = { path = "../../../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = { path = "../../../extargsparse-rs/extargsparse_codegen"}
lazy_static = "^1.4.0"
