[package]
name = "addtype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true



[dependencies]
syn = { version = "^1", features = ["full", "parsing"] }
lazy_static = "1.4.0"
proc-macro2 = { version = "1.0.32", default-features = false }
