[package]
name = "addtype"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true



[dependencies]
syn = { version = "^1", features = ["full", "parsing"] }
funccall = {path = "../funccall"}
lazy_static = "^1.4.0"
proc-macro2 = { version = "1.0.32", default-features = false }
rand = "^0.8.5"
bytes = "^0.5.3"
log4rs = "^0.8.3"
log = "^0.4.8"
regex = "^1"