[package]
name = "calladdtype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addtype = { path = "../addtype"}
funccall = { path = "../funccall"}
lazy_static = "1.4.0"
regex = "^1"
serde_json = "^1.0.42"